Started adding content.

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>aikumo web</title>
+    <title>Aikumo</title>
+    <!-- TODO: ^ "Making meaning with data analytics and machine learning" -->
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
@@ -16,21 +17,78 @@
     <!-- endbuild -->
 </head>
 <body>
-    <!--[if lt IE 10]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-        your browser</a> to improve your experience.</p>
-    <![endif]-->
 
-    <div class="hero-unit">
-        <h1>'Allo, 'Allo!</h1>
+    <header>
+        <nav>
+            <a href="#home">Aikumo</a>
+            <a href="#about">Luomme tietoon merkitystä</a>
+            <a href="#services">Sovellukset ja palvelut</a>
+            <a href="#technology">Teknologia</a>
+            <a href="#contact">Ota yhteyttä</a>
+        </nav>
+    </header>
 
-        <p>You now have</p>
-        <ul>
-            <li>HTML5 Boilerplate</li>
-            <li>Sass</li>
+    <main>
 
-        </ul>
-    </div>
+        <section id="home">
+            <h1>Aikumo</h1>
+            <p>Making Meaning</p>
+            <a href="#about">Lue lisää</a>
+        </section>
+
+        <section id="about">
+            <h2>Luomme tietoon merkitystä</h2>
+            <p>
+                Maailma on täynnä dataa. Me luomme siihen merkitystä. Meidän liiketoimintamme tarkoitus on parantaa
+                asiakkaidemme liiketoiminnan tehokkuutta. Aikumo analysoi tietoa älykkäillä, itseoppivilla ohjelmistoilla
+                monien teollisuuden ja liiketoiminnan prosessien tehostamiseksi. Ainutlaatuinen analysointiratkaisumme
+                skaalautuu millaisiin tahansa tietomääriin.
+            </p>
+            <h3>Lupauksemme</h3>
+            <p>
+                Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
+                järjestymättömissä muodoissa tiedot ovat ja tiedättekö vielä itse niiden sisältämistä riippuvuuksista.
+                Piilossa oleva tieto on hyvin usein käännettävissä merkittäviksi liiketoimintaeduiksi tai uusiksi
+                mahdollisuuksiksi.
+            </p>
+            <p>
+                Tuloksina asiakkaamme saavat tietoja siitä, mitä prosesseissa oikein tapahtuu, mitä niissä tulee
+                tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tarkoittaen merkittäviä säästöjä, vähemmin
+                yllättäviä tuotantokatkoja ja parempaa kannattavuutta.
+            </p>
+            <h3>Nopeasti ja tehokkaasti</h3>
+            <p>
+                Meidän liiketoimintamme ydin on asiakkaidemme liiketoimintaprosessien parantaminen ja paremman
+                tiedon tuottaminen päätösten pohjaksi. Ratkaisujemme pohjana ovat monien vuosien aikana kehitetyt,
+                kansainvälisesti patentoidut algoritmit, jotka käyvät älykkäästi läpi kaiken niille syötetyn tiedon ja löytävät
+                siinä olevat korrelaatiot. Tuotteemme ja palvelumme ovat erittäin vahvasti itseoppivia, mikä mahdollistaa
+                tavattoman nopean toiminnan ja tulosten saamisen.
+            </p>
+            <h3>Yksi-kaksi-kolme</h3>
+            <ol>
+                <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.</li>
+                <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!</li>
+                <li>Jos olemme molemmat vakuuttuneita tuloksista ja uuden ratkaisun potentiaalista, sovimme sen
+                    tuotteistamisesta bisneskäyttöön. Sen tekemiseen tarvitsemme yleensä vain viikon tai kaksi, jonka
+                    jälkeen on hyötykäytön aika!</li>
+            </ol>
+        </section>
+
+        <section id="services">
+            <h2>Sovellukset ja palvelut</h2>
+        </section>
+
+        <section id="technology">
+            <h2>Teknologia</h2>
+        </section>
+
+        <section id="contact">
+            <h2>Ota yhteyttä</h2>
+        </section>
+
+    </main>
+
+    <footer></footer>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -50,5 +108,6 @@
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
+
 </body>
 </html>
