--- a/app/index.html
+++ b/app/index.html
@@ -66,24 +66,95 @@
             </p>
             <h3>Yksi-kaksi-kolme</h3>
             <ol>
-                <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.</li>
-                <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!</li>
+                <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.
+                <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!
                 <li>Jos olemme molemmat vakuuttuneita tuloksista ja uuden ratkaisun potentiaalista, sovimme sen
                     tuotteistamisesta bisneskäyttöön. Sen tekemiseen tarvitsemme yleensä vain viikon tai kaksi, jonka
-                    jälkeen on hyötykäytön aika!</li>
+                    jälkeen on hyötykäytön aika!
             </ol>
         </section>
 
         <section id="services">
             <h2>Sovellukset ja palvelut</h2>
+            <p>
+                Meillä on kolmella toimialalla jo useita sovelluksia ja palveluita, jotka on verifioitu ja testattu yhdessä
+                asiakkaidemme kanssa. Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a
+                Service, AaaS).
+            </p>
+            <h3>AI-Energy&trade; - Energiantuotannon ja energiamarkkinoiden käyttöön</h3>
+            <p>
+                Kuinka paljon energiaa verkossa kuluu ja miltä koko energiamarkkina samanaikaisesti näyttää? Ennuste
+                kertoo optimaaliset markkinaoperaatiot kulujen minimoimiseksi ja tuloksen maksimoimiseksi.
+            </p>
+            <ul>
+                <li>Energiankäytön koko ketjun hallinta tuotannosta käyttäjään vaatii parannuksia tuotannon ja
+                    kulutuksen dynamiikan lisääntyessä.
+                <li>Energiayhtiöiden täytyy tietää yhä tarkemmin, kuinka paljon energiaa niiden täytyy tuottaa sekä
+                    ostaa markkinoilta omien asiakkaidensa käyttöön ja millainen toiminta markkinoilla tuottaa
+                    parhaan tuloksen.
+                <li>Aikumon palvelu oppii markkinan käyttäytymisen ja tuottaa luotettavat ennusteet
+            </ul>
+            <!-- TODO: energy-figure -->
+            <h3>AI-Uptime&trade; - Ennaltaehkäisevään toimintaan ja huoltoon</h3>
+            <p>
+                Mittaustiedot paljastavat miten komponentti, prosessi tai tehdas tulee käyttäytymään tulevaisuudessa.
+                Aikumon palveluiden avulla voit tietää, mitä seuraavaksi tapahtuu.
+            </p>
+            <ul>
+                <li>Parannamme tuotannon (jalostuslaitos, voimalaitos, prosessin laite) käytettävyyttä vähentämällä
+                    yllättäviä vikoja ja tuotannon pysähdyksiä.
+                <li>Auttaa oikeaan ja oikea-aikaiseen ylläpitoon ja huoltotoimenpiteisiin todellisen tarpeen mukaan.
+                <li>Aikumon palvelu oppii prosessin käytöksen, tunnistaa komponenttien eliniän ja mallintaa
+                    kulumisen ennakoivaa huoltoa varten.
+            </ul>
+            <!-- TODO: uptime-figure -->
+            <h3>AI-Finance&trade; - Liiketoiminnan seuraamiseen ja ennustamiseen</h3>
+            <p>
+                Miten myynti edistyy? Millaiset ovat erilaisten myynnin toimien ja kamppanjoiden tulokset sekä tehokkuus?
+            </p>
+            <ul>
+                <li>Aikumon tuotteet oppivat myyntiprosessin dynamiikan, markkinoiden käyttymisen sekä
+                    asiakassuhteet.
+                <li>Tee tarkempia liikevaihdon ennusteita ja hanki lisää ymmärrystä myynnin kehittämiseen.
+            </ul>
+            <!-- TODO: finance-figure -->
         </section>
 
         <section id="technology">
             <h2>Teknologia</h2>
+            <p>
+                Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
+                standardeja Web-teknologian rajapintoja, protokollia ja turvaratkaisuja. Tietoja voidaan lukea helposti
+                esimerkiksi automaatiojärjestelmistä, tietokannoista, mittausverkoista sekä kerätä avointa dataa mistä
+                tahansa ulkopuolisesta lähteestä.
+            </p>
+            <p>
+                Palvelumme toimivat pilvessä tai haluttaessa virtuaalikoneena asiakkaan omassa IT-infrassa, samoilla
+                standardirajapinnoilla.
+            </p>
+            <!-- TODO: technology-figure -->
         </section>
 
         <section id="contact">
             <h2>Ota yhteyttä</h2>
+            <ul>
+                <li>
+                    <h3>Pasi Ojala</h3>
+                    <p>CEO, co-founder</p>
+                </li>
+                <li>
+                    <h3>Kari Rantanen</h3>
+                    <p>Sales and Marketing</p>
+                </li>
+                <li>
+                    <h3>Okko Räsänen</h3>
+                    <p>Chief Scientist, co-founder</p>
+                </li>
+                <li>
+                    <h3>Janne Lähteenmäki</h3>
+                    <p>Software Lead</p>
+                </li>
+            </ul>
         </section>
 
     </main>
