Started doing the layout (mobile-first).

--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,9 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        Copyright &copy; Aikumo 2014
+    </footer>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
