some styling for home

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -29,14 +31,16 @@
     </header>
 
     <section id="home">
-        <h1>Aikumo</h1>
-        <p>Making Meaning</p>
-        <a href="#about">Lue lisää</a>
+        <div>
+            <h1>Aikumo</h1>
+            <p>Making Meaning</p>
+            <a href="#about">Lue lisää</a>
+        </div>
     </section>
 
     <main>
 
-        <section id="about">
+        <section id="about" class="section">
             <h2>Luomme tietoon merkitystä</h2>
             <p>
                 Maailma on täynnä dataa. Me luomme siihen merkitystä. Meidän liiketoimintamme tarkoitus on parantaa
@@ -74,7 +78,7 @@
             </ol>
         </section>
 
-        <section id="services">
+        <section id="services" class="section">
             <h2>Sovellukset ja palvelut</h2>
             <p>
                 Meillä on kolmella toimialalla jo useita sovelluksia ja palveluita, jotka on verifioitu ja testattu yhdessä
@@ -120,7 +124,7 @@
             <!-- TODO: finance-figure -->
         </section>
 
-        <section id="technology">
+        <section id="technology" class="section">
             <h2>Teknologia</h2>
             <p>
                 Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
@@ -135,7 +139,7 @@
             <!-- TODO: technology-figure -->
         </section>
 
-        <section id="contact">
+        <section id="contact" class="section">
             <h2>Ota yhteyttä</h2>
             <ul>
                 <li>
