Made the "about" section into a grid.

--- a/app/index.html
+++ b/app/index.html
@@ -44,34 +44,40 @@
                 monien teollisuuden ja liiketoiminnan prosessien tehostamiseksi. Ainutlaatuinen analysointiratkaisumme
                 skaalautuu millaisiin tahansa tietomääriin.
             </p>
-            <h3>Lupauksemme</h3>
-            <p>
-                Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
-                järjestymättömissä muodoissa tiedot ovat ja tiedättekö vielä itse niiden sisältämistä riippuvuuksista.
-                Piilossa oleva tieto on hyvin usein käännettävissä merkittäviksi liiketoimintaeduiksi tai uusiksi
-                mahdollisuuksiksi.
-            </p>
-            <p>
-                Tuloksina asiakkaamme saavat tietoja siitä, mitä prosesseissa oikein tapahtuu, mitä niissä tulee
-                tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tarkoittaen merkittäviä säästöjä, vähemmin
-                yllättäviä tuotantokatkoja ja parempaa kannattavuutta.
-            </p>
-            <h3>Nopeasti ja tehokkaasti</h3>
-            <p>
-                Meidän liiketoimintamme ydin on asiakkaidemme liiketoimintaprosessien parantaminen ja paremman
-                tiedon tuottaminen päätösten pohjaksi. Ratkaisujemme pohjana ovat monien vuosien aikana kehitetyt,
-                kansainvälisesti patentoidut algoritmit, jotka käyvät älykkäästi läpi kaiken niille syötetyn tiedon ja löytävät
-                siinä olevat korrelaatiot. Tuotteemme ja palvelumme ovat erittäin vahvasti itseoppivia, mikä mahdollistaa
-                tavattoman nopean toiminnan ja tulosten saamisen.
-            </p>
-            <h3>Yksi-kaksi-kolme</h3>
-            <ol>
-                <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.
-                <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!
-                <li>Jos olemme molemmat vakuuttuneita tuloksista ja uuden ratkaisun potentiaalista, sovimme sen
-                    tuotteistamisesta bisneskäyttöön. Sen tekemiseen tarvitsemme yleensä vain viikon tai kaksi, jonka
-                    jälkeen on hyötykäytön aika!
-            </ol>
+            <section>
+                <h3>Lupauksemme</h3>
+                <p>
+                    Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
+                    järjestymättömissä muodoissa tiedot ovat ja tiedättekö vielä itse niiden sisältämistä riippuvuuksista.
+                    Piilossa oleva tieto on hyvin usein käännettävissä merkittäviksi liiketoimintaeduiksi tai uusiksi
+                    mahdollisuuksiksi.
+                </p>
+                <p>
+                    Tuloksina asiakkaamme saavat tietoja siitä, mitä prosesseissa oikein tapahtuu, mitä niissä tulee
+                    tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tarkoittaen merkittäviä säästöjä, vähemmin
+                    yllättäviä tuotantokatkoja ja parempaa kannattavuutta.
+                </p>
+            </section>
+            <section>
+                <h3>Nopeasti ja tehokkaasti</h3>
+                <p>
+                    Meidän liiketoimintamme ydin on asiakkaidemme liiketoimintaprosessien parantaminen ja paremman
+                    tiedon tuottaminen päätösten pohjaksi. Ratkaisujemme pohjana ovat monien vuosien aikana kehitetyt,
+                    kansainvälisesti patentoidut algoritmit, jotka käyvät älykkäästi läpi kaiken niille syötetyn tiedon ja löytävät
+                    siinä olevat korrelaatiot. Tuotteemme ja palvelumme ovat erittäin vahvasti itseoppivia, mikä mahdollistaa
+                    tavattoman nopean toiminnan ja tulosten saamisen.
+                </p>
+            </section>
+            <section>
+                <h3>Yksi-kaksi-kolme</h3>
+                <ol>
+                    <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.
+                    <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!
+                    <li>Jos olemme molemmat vakuuttuneita tuloksista ja uuden ratkaisun potentiaalista, sovimme sen
+                        tuotteistamisesta bisneskäyttöön. Sen tekemiseen tarvitsemme yleensä vain viikon tai kaksi, jonka
+                        jälkeen on hyötykäytön aika!
+                </ol>
+            </section>
         </section>
 
         <section id="services">
