--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -43,6 +44,7 @@
             skaalautuu millaisiin tahansa tietomääriin.
         </p>
         <section>
+            <i class="fa fa-angellist"></i>
             <h3>Lupauksemme</h3>
             <p>
                 Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
@@ -57,6 +59,7 @@
             </p>
         </section>
         <section>
+            <i class="fa fa-angellist"></i>
             <h3>Nopeasti ja tehokkaasti</h3>
             <p>
                 Meidän liiketoimintamme ydin on asiakkaidemme liiketoimintaprosessien parantaminen ja paremman
@@ -67,6 +70,7 @@
             </p>
         </section>
         <section>
+            <i class="fa fa-angellist"></i>
             <h3>Yksi-kaksi-kolme</h3>
             <ol>
                 <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.
