Added "smooth-scroll" for, you know, smooth scrolling between anchors.

--- a/app/index.html
+++ b/app/index.html
@@ -21,18 +21,18 @@
 
     <header>
         <nav>
-            <a href="#home">Aikumo</a>
-            <a href="#about">Luomme tietoon merkitystä</a>
-            <a href="#services">Sovellukset ja palvelut</a>
-            <a href="#technology">Teknologia</a>
-            <a href="#contact">Ota yhteyttä</a>
+            <a data-scroll href="#home">Aikumo</a>
+            <a data-scroll href="#about">Luomme tietoon merkitystä</a>
+            <a data-scroll href="#services">Sovellukset ja palvelut</a>
+            <a data-scroll href="#technology">Teknologia</a>
+            <a data-scroll href="#contact">Ota yhteyttä</a>
         </nav>
     </header>
 
     <section id="home">
         <h1>Aikumo</h1>
         <p>Making Meaning</p>
-        <a href="#about">Lue lisää</a>
+        <a data-scroll href="#about">Lue lisää</a>
     </section>
 
     <section id="about">
@@ -171,6 +171,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
