--- a/app/index.html
+++ b/app/index.html
@@ -34,112 +34,131 @@
     <section id="home">
         <div>
             <h1>Aikumo</h1>
-            <p>Making Meaning</p>
-            <a data-scroll href="#about">Lue lisää</a>
+            <div class="bottom-half">
+                <p>Making Meaning</p>
+                <a data-scroll href="#about">Lue lisää</a>
+            </div>
         </div>
     </section>
 
     <section id="about" class="section">
-        <h2>Luomme tietoon merkitystä</h2>
-        <p>
-            Maailma on täynnä dataa. Me luomme siihen merkitystä. Meidän liiketoimintamme tarkoitus on parantaa
-            asiakkaidemme liiketoiminnan tehokkuutta. Aikumo analysoi tietoa älykkäillä, itseoppivilla ohjelmistoilla
-            monien teollisuuden ja liiketoiminnan prosessien tehostamiseksi. Ainutlaatuinen analysointiratkaisumme
-            skaalautuu millaisiin tahansa tietomääriin.
-        </p>
-        <section>
-            <i class="fa fa-angellist"></i>
-            <h3>Lupauksemme</h3>
-            <p>
-                Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
-                järjestymättömissä muodoissa tiedot ovat ja tiedättekö vielä itse niiden sisältämistä riippuvuuksista.
-                Piilossa oleva tieto on hyvin usein käännettävissä merkittäviksi liiketoimintaeduiksi tai uusiksi
-                mahdollisuuksiksi.
-            </p>
-            <p>
-                Tuloksina asiakkaamme saavat tietoja siitä, mitä prosesseissa oikein tapahtuu, mitä niissä tulee
-                tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tarkoittaen merkittäviä säästöjä, vähemmin
-                yllättäviä tuotantokatkoja ja parempaa kannattavuutta.
-            </p>
-        </section>
-        <section>
-            <i class="fa fa-angellist"></i>
-            <h3>Nopeasti ja tehokkaasti</h3>
-            <p>
-                Meidän liiketoimintamme ydin on asiakkaidemme liiketoimintaprosessien parantaminen ja paremman
-                tiedon tuottaminen päätösten pohjaksi. Ratkaisujemme pohjana ovat monien vuosien aikana kehitetyt,
-                kansainvälisesti patentoidut algoritmit, jotka käyvät älykkäästi läpi kaiken niille syötetyn tiedon ja löytävät
-                siinä olevat korrelaatiot. Tuotteemme ja palvelumme ovat erittäin vahvasti itseoppivia, mikä mahdollistaa
-                tavattoman nopean toiminnan ja tulosten saamisen.
-            </p>
-        </section>
-        <section>
-            <i class="fa fa-angellist"></i>
-            <h3>Yksi-kaksi-kolme</h3>
-            <ol>
-                <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.
-                <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!
-                <li>Jos olemme molemmat vakuuttuneita tuloksista ja uuden ratkaisun potentiaalista, sovimme sen
-                    tuotteistamisesta bisneskäyttöön. Sen tekemiseen tarvitsemme yleensä vain viikon tai kaksi, jonka
-                    jälkeen on hyötykäytön aika!
-            </ol>
-        </section>
+        <div class="intro-area">
+            <h2>Luomme tietoon merkitystä</h2>
+            <div class="intro">
+                Maailma on täynnä dataa. Me luomme siihen merkitystä. Meidän liiketoimintamme tarkoitus on parantaa
+                asiakkaidemme liiketoiminnan tehokkuutta. Aikumo analysoi tietoa älykkäillä, itseoppivilla ohjelmistoilla
+                monien teollisuuden ja liiketoiminnan prosessien tehostamiseksi. Ainutlaatuinen analysointiratkaisumme
+                skaalautuu millaisiin tahansa tietomääriin.
+            </div>
+        </div>
+        <div class="about-sections">
+            <section>
+                <i class="fa fa-search"></i>
+                <h3>Lupauksemme</h3>
+                <p>
+                    Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
+                    järjestymättömissä muodoissa tiedot ovat ja tiedättekö vielä itse niiden sisältämistä riippuvuuksista.
+                    Piilossa oleva tieto on hyvin usein käännettävissä merkittäviksi liiketoimintaeduiksi tai uusiksi
+                    mahdollisuuksiksi.
+                </p>
+                <p>
+                    Tuloksina asiakkaamme saavat tietoja siitä, mitä prosesseissa oikein tapahtuu, mitä niissä tulee
+                    tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tarkoittaen merkittäviä säästöjä, vähemmin
+                    yllättäviä tuotantokatkoja ja parempaa kannattavuutta.
+                </p>
+            </section>
+            <section>
+                <i class="fa fa-line-chart"></i>
+                <h3>Nopeasti ja tehokkaasti</h3>
+                <p>
+                    Meidän liiketoimintamme ydin on asiakkaidemme liiketoimintaprosessien parantaminen ja paremman
+                    tiedon tuottaminen päätösten pohjaksi.
+                </p>
+                <p>
+                    Ratkaisujemme pohjana ovat monien vuosien aikana kehitetyt,
+                    kansainvälisesti patentoidut algoritmit, jotka käyvät älykkäästi läpi kaiken niille syötetyn tiedon ja löytävät
+                    siinä olevat korrelaatiot. Tuotteemme ja palvelumme ovat erittäin vahvasti itseoppivia, mikä mahdollistaa
+                    tavattoman nopean toiminnan ja tulosten saamisen.
+                </p>
+            </section>
+            <section>
+                <i class="fa fa-cogs"></i>
+                <h3>Yksi - kaksi - kolme</h3>
+                <ol>
+                    <li>Ensin suoritamme testiajon asiakkaan meille toimittamilla tiedoilla.
+                    <li>Sen jälkeen tutkimme tuloksia yhdessä. Tämä voidaan tehdä seuraavana työpäivänä!
+                    <li>Jos olemme molemmat vakuuttuneita tuloksista ja uuden ratkaisun potentiaalista, sovimme sen
+                        tuotteistamisesta bisneskäyttöön. Sen tekemiseen tarvitsemme yleensä vain viikon tai kaksi, jonka
+                        jälkeen on hyötykäytön aika!
+                </ol>
+            </section>
+        </div>
     </section>
 
     <section id="services" class="section">
-        <h2>Sovellukset ja palvelut</h2>
-        <p>
-            Meillä on kolmella toimialalla jo useita sovelluksia ja palveluita, jotka on verifioitu ja testattu yhdessä
-            asiakkaidemme kanssa. Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a
-            Service, AaaS).
-        </p>
-        <h3>AI-Energy&trade; - Energiantuotannon ja energiamarkkinoiden käyttöön</h3>
-        <p>
-            Kuinka paljon energiaa verkossa kuluu ja miltä koko energiamarkkina samanaikaisesti näyttää? Ennuste
-            kertoo optimaaliset markkinaoperaatiot kulujen minimoimiseksi ja tuloksen maksimoimiseksi.
-        </p>
-        <ul>
-            <li>Energiankäytön koko ketjun hallinta tuotannosta käyttäjään vaatii parannuksia tuotannon ja
-                kulutuksen dynamiikan lisääntyessä.
-            <li>Energiayhtiöiden täytyy tietää yhä tarkemmin, kuinka paljon energiaa niiden täytyy tuottaa sekä
-                ostaa markkinoilta omien asiakkaidensa käyttöön ja millainen toiminta markkinoilla tuottaa
-                parhaan tuloksen.
-            <li>Aikumon palvelu oppii markkinan käyttäytymisen ja tuottaa luotettavat ennusteet
-        </ul>
-        <!-- TODO: energy-figure -->
-        <h3>AI-Uptime&trade; - Ennaltaehkäisevään toimintaan ja huoltoon</h3>
-        <p>
-            Mittaustiedot paljastavat miten komponentti, prosessi tai tehdas tulee käyttäytymään tulevaisuudessa.
-            Aikumon palveluiden avulla voit tietää, mitä seuraavaksi tapahtuu.
-        </p>
-        <ul>
-            <li>Parannamme tuotannon (jalostuslaitos, voimalaitos, prosessin laite) käytettävyyttä vähentämällä
-                yllättäviä vikoja ja tuotannon pysähdyksiä.
-            <li>Auttaa oikeaan ja oikea-aikaiseen ylläpitoon ja huoltotoimenpiteisiin todellisen tarpeen mukaan.
-            <li>Aikumon palvelu oppii prosessin käytöksen, tunnistaa komponenttien eliniän ja mallintaa
-                kulumisen ennakoivaa huoltoa varten.
-        </ul>
-        <!-- TODO: uptime-figure -->
-        <h3>AI-Finance&trade; - Liiketoiminnan seuraamiseen ja ennustamiseen</h3>
-        <p>
-            Miten myynti edistyy? Millaiset ovat erilaisten myynnin toimien ja kamppanjoiden tulokset sekä tehokkuus?
-        </p>
-        <ul>
-            <li>Aikumon tuotteet oppivat myyntiprosessin dynamiikan, markkinoiden käyttymisen sekä
-                asiakassuhteet.
-            <li>Tee tarkempia liikevaihdon ennusteita ja hanki lisää ymmärrystä myynnin kehittämiseen.
-        </ul>
-        <!-- TODO: finance-figure -->
+        <div class="intro-area">
+            <h2>Sovellukset ja palvelut</h2>
+            <div class="intro">
+                Meillä on kolmella toimialalla jo useita sovelluksia ja palveluita, jotka on verifioitu ja testattu yhdessä
+                asiakkaidemme kanssa. Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a
+                Service, AaaS).
+            </div>
+        </div>
+        <div class="service-section">
+            <h3>AI-Energy&trade; - Energiantuotannon ja energiamarkkinoiden käyttöön</h3>
+            <p>
+                Kuinka paljon energiaa verkossa kuluu ja miltä koko energiamarkkina samanaikaisesti näyttää? Ennuste
+                kertoo optimaaliset markkinaoperaatiot kulujen minimoimiseksi ja tuloksen maksimoimiseksi.
+            </p>
+            <ul>
+                <li>Energiankäytön koko ketjun hallinta tuotannosta käyttäjään vaatii parannuksia tuotannon ja
+                    kulutuksen dynamiikan lisääntyessä.
+                <li>Energiayhtiöiden täytyy tietää yhä tarkemmin, kuinka paljon energiaa niiden täytyy tuottaa sekä
+                    ostaa markkinoilta omien asiakkaidensa käyttöön ja millainen toiminta markkinoilla tuottaa
+                    parhaan tuloksen.
+                <li>Aikumon palvelu oppii markkinan käyttäytymisen ja tuottaa luotettavat ennusteet
+            </ul>
+            <!-- TODO: energy-figure -->
+        </div>
+        <div class="service-section">
+            <h3>AI-Uptime&trade; - Ennaltaehkäisevään toimintaan ja huoltoon</h3>
+            <p>
+                Mittaustiedot paljastavat miten komponentti, prosessi tai tehdas tulee käyttäytymään tulevaisuudessa.
+                Aikumon palveluiden avulla voit tietää, mitä seuraavaksi tapahtuu.
+            </p>
+            <ul>
+                <li>Parannamme tuotannon (jalostuslaitos, voimalaitos, prosessin laite) käytettävyyttä vähentämällä
+                    yllättäviä vikoja ja tuotannon pysähdyksiä.
+                <li>Auttaa oikeaan ja oikea-aikaiseen ylläpitoon ja huoltotoimenpiteisiin todellisen tarpeen mukaan.
+                <li>Aikumon palvelu oppii prosessin käytöksen, tunnistaa komponenttien eliniän ja mallintaa
+                    kulumisen ennakoivaa huoltoa varten.
+            </ul>
+            <!-- TODO: uptime-figure -->
+        </div>
+        <div class="service-section">
+            <h3>AI-Finance&trade; - Liiketoiminnan seuraamiseen ja ennustamiseen</h3>
+            <p>
+                Miten myynti edistyy? Millaiset ovat erilaisten myynnin toimien ja kamppanjoiden tulokset sekä tehokkuus?
+            </p>
+            <ul>
+                <li>Aikumon tuotteet oppivat myyntiprosessin dynamiikan, markkinoiden käyttymisen sekä
+                    asiakassuhteet.
+                <li>Tee tarkempia liikevaihdon ennusteita ja hanki lisää ymmärrystä myynnin kehittämiseen.
+            </ul>
+            <!-- TODO: finance-figure -->
+        </div>
     </section>
 
     <section id="technology" class="section">
-        <h2>Teknologia</h2>
-        <p>
-            Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
-            standardeja Web-teknologian rajapintoja, protokollia ja turvaratkaisuja. Tietoja voidaan lukea helposti
-            esimerkiksi automaatiojärjestelmistä, tietokannoista, mittausverkoista sekä kerätä avointa dataa mistä
-            tahansa ulkopuolisesta lähteestä.
-        </p>
+        <div class="intro-area">
+            <h2>Teknologia</h2>
+            <div class="intro">
+                Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
+                standardeja Web-teknologian rajapintoja, protokollia ja turvaratkaisuja. Tietoja voidaan lukea helposti
+                esimerkiksi automaatiojärjestelmistä, tietokannoista, mittausverkoista sekä kerätä avointa dataa mistä
+                tahansa ulkopuolisesta lähteestä.
+            </div>
+        </div>
         <p>
             Palvelumme toimivat pilvessä tai haluttaessa virtuaalikoneena asiakkaan omassa IT-infrassa, samoilla
             standardirajapinnoilla.
@@ -175,9 +194,10 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
