--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
                 Service, AaaS).
             </div>
         </div>
-        <div class="service-section">
+        <div class="service-section first">
             <h3>AI-Energy&trade; - Energiantuotannon ja energiamarkkinoiden käyttöön</h3>
             <p>
                 Kuinka paljon energiaa verkossa kuluu ja miltä koko energiamarkkina samanaikaisesti näyttää? Ennuste
@@ -120,7 +120,7 @@
             </ul>
             <!-- TODO: energy-figure -->
         </div>
-        <div class="service-section">
+        <div class="service-section second">
             <h3>AI-Uptime&trade; - Ennaltaehkäisevään toimintaan ja huoltoon</h3>
             <p>
                 Mittaustiedot paljastavat miten komponentti, prosessi tai tehdas tulee käyttäytymään tulevaisuudessa.
@@ -135,7 +135,7 @@
             </ul>
             <!-- TODO: uptime-figure -->
         </div>
-        <div class="service-section">
+        <div class="service-section third">
             <h3>AI-Finance&trade; - Liiketoiminnan seuraamiseen ja ennustamiseen</h3>
             <p>
                 Miten myynti edistyy? Millaiset ovat erilaisten myynnin toimien ja kamppanjoiden tulokset sekä tehokkuus?
@@ -170,18 +170,22 @@
         <h2>Ota yhteyttä</h2>
         <ul>
             <li>
+                <div class="frame"></div>
                 <h3>Pasi Ojala</h3>
                 <p>CEO, co-founder</p>
             </li>
             <li>
+                <div class="frame"></div>
                 <h3>Kari Rantanen</h3>
                 <p>Sales and Marketing</p>
             </li>
             <li>
+                <div class="frame"></div>
                 <h3>Okko Räsänen</h3>
                 <p>Chief Scientist, co-founder</p>
             </li>
             <li>
+                <div class="frame"></div>
                 <h3>Janne Lähteenmäki</h3>
                 <p>Software Lead</p>
             </li>
