loads of styles

--- a/app/index.html
+++ b/app/index.html
@@ -156,14 +156,11 @@
                 Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
                 standardeja Web-teknologian rajapintoja, protokollia ja turvaratkaisuja. Tietoja voidaan lukea helposti
                 esimerkiksi automaatiojärjestelmistä, tietokannoista, mittausverkoista sekä kerätä avointa dataa mistä
-                tahansa ulkopuolisesta lähteestä.
+                tahansa ulkopuolisesta lähteestä. Palvelumme toimivat pilvessä tai haluttaessa virtuaalikoneena asiakkaan omassa IT-infrassa, samoilla
+                standardirajapinnoilla.
             </div>
         </div>
-        <p>
-            Palvelumme toimivat pilvessä tai haluttaessa virtuaalikoneena asiakkaan omassa IT-infrassa, samoilla
-            standardirajapinnoilla.
-        </p>
-        <!-- TODO: technology-figure -->
+        <img src="images/technology.svg"/>
     </section>
 
     <section id="contact" class="section">
@@ -193,7 +190,16 @@
     </section>
 
     <footer>
-        Copyright &copy; Aikumo 2014
+        <div class="contact-us">OTA MEIHIN YHTEYTTÄ</div>
+        <div class="release">Release the hidden power in your data. Now it's finally easy as 1-2-3!</div>
+        <form>
+            <div>
+                <input type="email" placeholder="Sähköpostiosoitteesi" />
+                <textarea type="email" rows="10" placeholder="Miten voimme olla avuksi?"></textarea>
+            </div>
+            <button type="submit">Ota yhteyttä</button>
+        </form>
+        <div class="copyright">Copyright &copy; Aikumo 2014</div>
     </footer>
 
     <!-- build:js(.) scripts/vendor.js -->
