Updated the header animations/layout to work sensibly on all fluid & static viewports.

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
     <header>
         <nav>
             <a data-scroll href="#home">Aikumo</a>
-            <a data-scroll href="#about">Luomme tietoon merkitystä</a>
-            <a data-scroll href="#services">Sovellukset ja palvelut</a>
+            <a data-scroll href="#about">Tietoon merkitystä</a>
+            <a data-scroll href="#services">Sovellukset <span style="white-space: nowrap">ja palvelut</span></a>
             <a data-scroll href="#technology">Teknologia</a>
             <a data-scroll href="#contact">Ota yhteyttä</a>
         </nav>
