first page to mobile

--- a/app/index.html
+++ b/app/index.html
@@ -59,11 +59,8 @@
                     Jos yrityksenne tietomassoissa on informaatiota, me löydämme sen! Riippumatta siitä, miten
                     järjestymättömissä muodoissa tiedot ovat ja tiedättekö vielä itse niiden sisältämistä riippuvuuksista.
                     Piilossa oleva tieto on hyvin usein käännettävissä merkittäviksi liiketoimintaeduiksi tai uusiksi
-                    mahdollisuuksiksi.
-                </p>
-                <p>
-                    Tuloksina asiakkaamme saavat tietoja siitä, mitä prosesseissa oikein tapahtuu, mitä niissä tulee
-                    tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tarkoittaen merkittäviä säästöjä, vähemmin
+                    mahdollisuuksiksi. Tuloksena asiakkaamme saavat tietoa siitä, mitä prosesseissa tapahtuu, mitä niissä tulee
+                    tapahtumaan seuraavaksi ja mikä on paras tapa toimia. Tämä tarkoittaa merkittäviä säästöjä, vähemmän
                     yllättäviä tuotantokatkoja ja parempaa kannattavuutta.
                 </p>
             </section>
