new svgs for services

--- a/app/index.html
+++ b/app/index.html
@@ -103,35 +103,40 @@
         </div>
         <div class="service-section first">
             <h3>AI-Energy&trade; - Energiantuotannon ja energiamarkkinoiden käyttöön</h3>
-            <p>
-                Kuinka paljon energiaa verkossa kuluu ja miltä koko energiamarkkina samanaikaisesti näyttää? Ennuste
-                kertoo optimaaliset markkinaoperaatiot kulujen minimoimiseksi ja tuloksen maksimoimiseksi.
-            </p>
-            <ul>
-                <li>Energiankäytön koko ketjun hallinta tuotannosta käyttäjään vaatii parannuksia tuotannon ja
-                    kulutuksen dynamiikan lisääntyessä.
-                <li>Energiayhtiöiden täytyy tietää yhä tarkemmin, kuinka paljon energiaa niiden täytyy tuottaa sekä
-                    ostaa markkinoilta omien asiakkaidensa käyttöön ja millainen toiminta markkinoilla tuottaa
-                    parhaan tuloksen.
-                <li>Aikumon palvelu oppii markkinan käyttäytymisen ja tuottaa luotettavat ennusteet
-            </ul>
-            <!-- TODO: energy-figure -->
+            <div>
+                <p>
+                    Kuinka paljon energiaa verkossa kuluu ja miltä koko energiamarkkina samanaikaisesti näyttää? Ennuste
+                    kertoo optimaaliset markkinaoperaatiot kulujen minimoimiseksi ja tuloksen maksimoimiseksi.
+                </p>
+                <ul>
+                    <li>Energiankäytön koko ketjun hallinta tuotannosta käyttäjään vaatii parannuksia tuotannon ja
+                        kulutuksen dynamiikan lisääntyessä.
+                    <li>Energiayhtiöiden täytyy tietää yhä tarkemmin, kuinka paljon energiaa niiden täytyy tuottaa sekä
+                        ostaa markkinoilta omien asiakkaidensa käyttöön ja millainen toiminta markkinoilla tuottaa
+                        parhaan tuloksen.
+                    <li>Aikumon palvelu oppii markkinan käyttäytymisen ja tuottaa luotettavat ennusteet
+                </ul>
+            </div>
+            <img src="images/ai-energy.svg" />
         </div>
         <div class="service-section second">
             <h3>AI-Uptime&trade; - Ennaltaehkäisevään toimintaan ja huoltoon</h3>
-            <p>
-                Mittaustiedot paljastavat miten komponentti, prosessi tai tehdas tulee käyttäytymään tulevaisuudessa.
-                Aikumon palveluiden avulla voit tietää, mitä seuraavaksi tapahtuu.
-            </p>
-            <ul>
-                <li>Parannamme tuotannon (jalostuslaitos, voimalaitos, prosessin laite) käytettävyyttä vähentämällä
-                    yllättäviä vikoja ja tuotannon pysähdyksiä.
-                <li>Auttaa oikeaan ja oikea-aikaiseen ylläpitoon ja huoltotoimenpiteisiin todellisen tarpeen mukaan.
-                <li>Aikumon palvelu oppii prosessin käytöksen, tunnistaa komponenttien eliniän ja mallintaa
-                    kulumisen ennakoivaa huoltoa varten.
-            </ul>
-            <!-- TODO: uptime-figure -->
+            <div>
+                <p>
+                    Mittaustiedot paljastavat miten komponentti, prosessi tai tehdas tulee käyttäytymään tulevaisuudessa.
+                    Aikumon palveluiden avulla voit tietää, mitä seuraavaksi tapahtuu.
+                </p>
+                <ul>
+                    <li>Parannamme tuotannon (jalostuslaitos, voimalaitos, prosessin laite) käytettävyyttä vähentämällä
+                        yllättäviä vikoja ja tuotannon pysähdyksiä.
+                    <li>Auttaa oikeaan ja oikea-aikaiseen ylläpitoon ja huoltotoimenpiteisiin todellisen tarpeen mukaan.
+                    <li>Aikumon palvelu oppii prosessin käytöksen, tunnistaa komponenttien eliniän ja mallintaa
+                        kulumisen ennakoivaa huoltoa varten.
+                </ul>
+            </div>
+            <img src="images/ai-uptime.svg" />
         </div>
+        <!--
         <div class="service-section third">
             <h3>AI-Finance&trade; - Liiketoiminnan seuraamiseen ja ennustamiseen</h3>
             <p>
@@ -142,8 +147,8 @@
                     asiakassuhteet.
                 <li>Tee tarkempia liikevaihdon ennusteita ja hanki lisää ymmärrystä myynnin kehittämiseen.
             </ul>
-            <!-- TODO: finance-figure -->
         </div>
+        -->
     </section>
 
     <section id="technology" class="section">
