Added the "team" section to navi.

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
             <a data-scroll href="#about">Tietoon merkitystä</a>
             <a data-scroll href="#services">Sovellukset <span style="white-space: nowrap">ja palvelut</span></a>
             <a data-scroll href="#technology">Teknologia</a>
-            <a data-scroll href="#contact">Ota yhteyttä</a>
+            <a data-scroll href="#contact">Tiimi</a>
+            <a data-scroll href="#contact-us">Ota yhteyttä</a>
         </nav>
     </header>
 
@@ -166,7 +167,7 @@
     </section>
 
     <section id="contact" class="section">
-        <h2>Ota yhteyttä</h2>
+        <h2>Tiimi</h2>
         <ul>
             <li>
                 <div class="frame"></div>
@@ -191,7 +192,7 @@
         </ul>
     </section>
 
-    <footer>
+    <footer id="contact-us" >
         <div class="contact-us">OTA MEIHIN YHTEYTTÄ</div>
         <div class="release">Release the hidden power in your data. Now it's finally easy as 1-2-3!</div>
         <form>
