--- a/app/index.html
+++ b/app/index.html
@@ -27,8 +27,8 @@
             <a data-scroll href="#about">Tietoon merkitystä</a>
             <a data-scroll href="#services">Sovellukset <span style="white-space: nowrap">ja palvelut</span></a>
             <a data-scroll href="#technology">Teknologia</a>
-            <a data-scroll href="#contact">Tiimi</a>
-            <a data-scroll href="#contact-us">Ota yhteyttä</a>
+            <a data-scroll href="#team">Tiimi</a>
+            <a data-scroll href="#contact">Ota yhteyttä</a>
         </nav>
     </header>
 
@@ -166,7 +166,7 @@
         <img src="images/technology.svg"/>
     </section>
 
-    <section id="contact" class="section">
+    <section id="team" class="section">
         <h2>Tiimi</h2>
         <ul>
             <li>
@@ -192,8 +192,8 @@
         </ul>
     </section>
 
-    <footer id="contact-us" >
-        <div class="contact-us">OTA MEIHIN YHTEYTTÄ</div>
+    <footer id="contact" >
+        <div class="contact">OTA MEIHIN YHTEYTTÄ</div>
         <div class="release">Release the hidden power in your data. Now it's finally easy as 1-2-3!</div>
         <form>
             <div>
