Switch to mustache variable interpolation - less annoying to type.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title><%= home.title %> - <%= home.tagline %></title>
+    <title>{{ home.title }} - {{ home.tagline }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -22,52 +22,52 @@
 
     <header>
         <nav>
-            <a data-scroll href="#home"><%= home.navi %></a>
-            <a data-scroll href="#about"><%= about.navi %></a>
-            <a data-scroll href="#services"><%= services.navi %></a>
-            <a data-scroll href="#technology"><%= technology.navi %></a>
-            <a data-scroll href="#team"><%= team.navi %></a>
-            <a data-scroll href="#contact"><%= contact.navi %></a>
+            <a data-scroll href="#home">{{ home.navi }}</a>
+            <a data-scroll href="#about">{{ about.navi }}</a>
+            <a data-scroll href="#services">{{ services.navi }}</a>
+            <a data-scroll href="#technology">{{ technology.navi }}</a>
+            <a data-scroll href="#team">{{ team.navi }}</a>
+            <a data-scroll href="#contact">{{ contact.navi }}</a>
         </nav>
     </header>
 
     <section id="home">
         <div>
-            <h1><%= home.title %></h1>
+            <h1>{{ home.title }}</h1>
             <div class="bottom-half">
-                <p><%= home.tagline %></p>
-                <a data-scroll href="#about"><%= home.readMore %></a>
+                <p>{{ home.tagline }}</p>
+                <a data-scroll href="#about">{{ home.readMore }}</a>
             </div>
         </div>
     </section>
 
     <section id="about" class="section">
         <div class="intro-area">
-            <h2><%= about.title %></h2>
-            <div class="intro"><%= about.intro %></div>
+            <h2>{{ about.title }}</h2>
+            <div class="intro">{{ about.intro }}</div>
         </div>
         <div class="about-sections">
             <section>
                 <i class="fa fa-search"></i>
-                <h3><%= about.promise.title %></h3>
-                <%= p(about.promise.content) %>
+                <h3>{{ about.promise.title }}</h3>
+                {{ p(about.promise.content) }}
             </section>
             <section>
                 <i class="fa fa-line-chart"></i>
-                <h3><%= about.fast.title %></h3>
-                <%= p(about.fast.content) %>
+                <h3>{{ about.fast.title }}</h3>
+                {{ p(about.fast.content) }}
             </section>
             <section>
                 <i class="fa fa-cogs"></i>
-                <h3><%= about.onetwothree.title %></h3>
-                <ol><%= li(about.onetwothree.content) %></ol>
+                <h3>{{ about.onetwothree.title }}</h3>
+                <ol>{{ li(about.onetwothree.content) }}</ol>
             </section>
         </div>
     </section>
 
     <section id="services" class="section">
         <div class="intro-area">
-            <h2><%= services.title %></h2>
+            <h2>{{ services.title }}</h2>
             <div class="intro">
                 Meillä on kolmella toimialalla jo useita sovelluksia ja palveluita, jotka on verifioitu ja testattu yhdessä
                 asiakkaidemme kanssa. Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a
@@ -126,7 +126,7 @@
 
     <section id="technology" class="section">
         <div class="intro-area">
-            <h2><%= technology.title %></h2>
+            <h2>{{ technology.title }}</h2>
             <div class="intro">
                 Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
                 standardeja Web-teknologian rajapintoja, protokollia ja turvaratkaisuja. Tietoja voidaan lukea helposti
@@ -139,7 +139,7 @@
     </section>
 
     <section id="team" class="section">
-        <h2><%= team.title %></h2>
+        <h2>{{ team.title }}</h2>
         <ul>
             <li>
                 <div class="frame"></div>
@@ -165,7 +165,7 @@
     </section>
 
     <footer id="contact" >
-        <div class="contact"><%= contact.title %></div>
+        <div class="contact">{{ contact.title }}</div>
         <div class="release">Release the hidden power in your data. Now it's finally easy as 1-2-3!</div>
         <form>
             <div>
